Minor correction. Spans go in paragraphs, not the other way around.

--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -37,13 +37,20 @@
     <hr />
 
     <!-- TODO #2 - Loop over jobs map to display all job fields -->
-    <div class="results">
-        <h1 th:unless="${search} and ${search.size()">No resualts found</h1>
+    <div class="listOfJobs" th:each="job : ${jobResults}">
+        <div class="singleJob">
+            <p class="row" th:each="key : ${job.keySet()}">
+                <span th:text="${key} + ': ' + ${job.get(key)}"></span>
+            </p>
+            <hr />
+        </div>
+
+        <!-- This just looked ugly to me, so I played with it above.
         <table class="listOfJobs" th:each="job : ${jobResults}">
-            <tr class="row" th:text="key : ${job.keySet()}">
-                <td th:text="key': ' + ${job.getKey()}"></td>
+            <tr class="row" th:each="key : ${job.keySet()}">
+                <td th:text="${key} + ': ' + ${job.get(key)}"></td>
             </tr>
-        </table>
+        </table>-->
     </div>
 
 </div>
